--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,4 +1,22 @@
 {
+  "startGameTitle": "ابدأ لعبة الذكاء",
+  "team1Name": "اسم الفريق الأول",
+  "enterTeam1Name": "أدخل اسم الفريق الأول",
+  "team2Name": "اسم الفريق الثاني",
+  "enterTeam2Name": "أدخل اسم الفريق الثاني",
+  "playersCount": "عدد اللاعبين في الفريق",
+  "startButton": "ابدأ اللعبة",
+  "type": "جميع الفئات",
+  "findo": "يمكنك العثور على جميع الالعاب التي قام جامات بإضافتها و شرائها ",
+  "game": "لعبة",
+  "activateBalance": "تفعيل رصيدك",
+  "maxGamesNotice": "يمكنك إنشاء حتى 10 ألعاب",
+  "jamaatGameLibrary": "JAMAAT مكتبة ألعاب",
+  "findAllGames": "يمكنك العثور على جميع الالعاب التي قام جامات بإضافتها و شرائها",
+  "noGamesYet": "🚫 لا توجد ألعاب حتى الآن",
+  "createNewGame": "إنشاء لعبة جديدة",
+  "showHint": "عرض التلميح",
+  "noHintAvailable": "لا يوجد تلميح",
   "gameLibrary": "مكتبة الألعاب",
   "noGames": "لا توجد ألعاب متاحة.",
   "selectedGameDetails": "تفاصيل اللعبة المختارة",
