--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,19 @@
 {
+  "startGameTitle": "Start IQ Game",
+  "team1Name": "Team 1 Name",
+  "enterTeam1Name": "Enter Team 1 Name",
+  "team2Name": "Team 2 Name",
+  "enterTeam2Name": "Enter Team 2 Name",
+  "playersCount": "Number of Players",
+  "startButton": "Start Game",
+  "type": "All Types",
+  "findo": "You can Find All Games In Jemmat Buy and Add it",
+  "jamaatGameLibrary": "JAMAAT Game Library",
+  "findAllGames": "Find all the games added and purchased by JAMAAT",
+  "noGamesYet": "🚫 No games available yet",
+  "createNewGame": "Create a new game",
+  "showHint": "Show Hint",
+  "noHintAvailable": "No Hint Available",
   "gameLibrary": "Game Library",
   "noGames": "No games available.",
   "selectedGameDetails": "Selected Game Details",
@@ -95,8 +110,9 @@
   "pleaseEnterCode": "Please enter code",
   "resend": "Resend",
   "home": "Home",
+  "maxGamesNotice": "You can make 10 Games  ",
   "create": "Create",
-  "myGames": "Games",
+  "myGames": "My Games",
   "profile": "Profile",
   "communication": "Communication",
   "yourGameBalance": "Your Game Balance",
@@ -172,6 +188,7 @@
   "congratulationsForTheFirstTeam": "Congratulations For The First Team",
   "congratulationsForTheSecondTeam": "Congratulations For The Second Team",
   "loading": "Loading",
+  "game": "Game",
   "dataNotFound": "Data Not Found",
   "tryAgain": "Try Again"
 }
