--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,4 +1,44 @@
 {
+  "resetTitle": "هل أنت متأكد؟",
+  "resetText": "سيتم مسح البورد وإعادة اللعب من البداية!",
+  "resetDoneTitle": "تم إعادة التعيين!",
+  "resetDoneText": "اللعبة بدأت من جديد.",
+  "exitTitle": "هل أنت متأكد؟",
+  "exitText": "سيتم الخروج من اللعبة!",
+  "yes": "نعم",
+  "no": "لا",
+  "backHome": "الرجوع للصفحة الرئيسية",
+  "noCategory": "بدون كاتيجوري",
+  "correct": "إجابة صحيحة ؟",
+  "wrong": "إجابة خاطئة",
+  "Four": "وصل أربعة",
+  "player1Label": "اسم اللاعب الأول",
+  "player1Placeholder": "أدخل اسم اللاعب الأول",
+  "player2Label": "اسم اللاعب الثاني",
+  "player2Placeholder": "أدخل اسم اللاعب الثاني",
+  "cat": " حدد الفئة",
+  "titleDraw": "حظ سعيد للفريقين",
+  "connectwin": "تهانينا للفائز",
+  "titleWin": "تهانينا للفريق {team}",
+  "teamTurn": "دور الفريق",
+  "first": "الأول",
+  "second": "الثاني",
+  "gameConnect": "وصل أربعة",
+  "gameTitle": "لعبة الذكاء",
+  "backToBoard": "الرجوع للوحة",
+  "exit": "خروج",
+  "endGame": "إنهاء اللعبة",
+  "noQuestions": "لا توجد أسئلة في هذا التصنيف",
+  "team1Points": "نقاط الفريق الأول",
+  "team2Points": "نقاط الفريق الثاني",
+  "noTitle": "لا يوجد عنوان",
+  "questionImage": "صورة السؤال",
+  "points": "نقطة",
+  "showAnswer": "أظهر الإجابة",
+  "noAnswer": "لا توجد إجابة",
+  "team": "الفريق",
+  "doublePoints": "مضاعفة النقاط",
+  "blockPoints": "منع النقاط",
   "startGameTitle": "ابدأ لعبة الذكاء",
   "team1Name": "اسم الفريق الأول",
   "enterTeam1Name": "أدخل اسم الفريق الأول",
@@ -169,12 +209,10 @@
   "secondTeam": "الفريق الثاني",
   "teamName": "اسم الفريق",
   "numberOfPlayers": "عدد اللاعبين",
-  "exit": "خروج",
   "alabakra": "العباقرة",
   "scoreFristTeam": "نقاط الفريق الاول",
   "scoreSecondTeam": "نقاط الفريق الثاني",
   "backToPanel": "العودة للوحة",
-  "showAnswer": "اظهار الجواب",
   "playAudio": "تشغيل الصوت",
   "stopAudio": "توقف الصوت",
   "playVideo": "تشغيل الفيديو",
