--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,44 @@
 {
+  "resetTitle": "Are you sure?",
+  "resetText": "The board will be cleared and the game will restart!",
+  "resetDoneTitle": "Reset Done!",
+  "resetDoneText": "The game has started again.",
+  "exitTitle": "Are you sure?",
+  "exitText": "You will exit the game!",
+  "yes": "Yes",
+  "no": "No",
+  "backHome": "Back to Home",
+  "noCategory": "No Category",
+  "correct": "Correct Answer?",
+  "wrong": "Wrong Answer",
+  "Four": "Connect Four",
+  "player1Label": "Player One Name",
+  "player1Placeholder": "Enter player one name",
+  "player2Label": "Player Two Name",
+  "player2Placeholder": "Enter player two name",
+  "cat": "Choose Category",
+  "titleDraw": "Good luck to both",
+  "connectwin": "Congratulations to Winner ",
+  "titleWin": "Congratulations to Team {team}",
+  "teamTurn": "Team Turn",
+  "first": "First",
+  "second": "Second",
+  "gameConnect": "Connect 4",
+  "gameTitle": "IQ Game",
+  "backToBoard": "Back to Board",
+  "exit": "Exit",
+  "endGame": "End Game",
+  "noQuestions": "No questions in this category",
+  "team1Points": "Team 1 Points",
+  "team2Points": "Team 2 Points",
+  "noTitle": "No Title",
+  "questionImage": "Question Image",
+  "points": "Points",
+  "showAnswer": "Show Answer",
+  "noAnswer": "No Answer",
+  "team": "Team",
+  "doublePoints": "Double Points",
+  "blockPoints": "Block Points",
   "startGameTitle": "Start IQ Game",
   "team1Name": "Team 1 Name",
   "enterTeam1Name": "Enter Team 1 Name",
@@ -114,8 +154,8 @@
   "myGames": "My Games",
   "profile": "Profile",
   "communication": "Communication",
-  "yourGameBalance": "Your Game Balance",
-  "activateYourBalance": "Activate Your Balance",
+  "yourGameBalance": "Balance",
+  "activateYourBalance": "Activate Code",
   "couponCode": "Coupon Code",
   "confirm": "Confirm",
   "commonQuestions": "Frequently Asked Questions",
@@ -163,7 +203,6 @@
   "secondTeam": "Second Team",
   "teamName": "Team Name",
   "numberOfPlayers": "Number of Players",
-  "exit": "Exit",
   "getTheQuestion": "Get the question",
   "nameOfPlayers": "Name of Players",
   "alabakra": "Alabakra",
@@ -173,7 +212,6 @@
   "scoreFristTeam": "Score Frist Team",
   "scoreSecondTeam": "Score Second Team",
   "backToPanel": "Back to Panel",
-  "showAnswer": "Show Answer",
   "playAudio": "Play Audio",
   "stopAudio": "Stop Audio",
   "playVideo": "Play Video",
