finsish round one

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -25,12 +25,14 @@
   "second": "الثاني",
   "gameConnect": "وصل أربعة",
   "gameTitle": "لعبة الذكاء",
+  "gameThree": "اللعبة الثالثة",
   "backToBoard": "الرجوع للوحة",
   "exit": "خروج",
   "endGame": "إنهاء اللعبة",
   "noQuestions": "لا توجد أسئلة في هذا التصنيف",
   "team1Points": "نقاط الفريق الأول",
   "team2Points": "نقاط الفريق الثاني",
+  "team2Points3": "نقاط فريق",
   "noTitle": "لا يوجد عنوان",
   "questionImage": "صورة السؤال",
   "points": "نقطة",
@@ -40,6 +42,7 @@
   "doublePoints": "مضاعفة النقاط",
   "blockPoints": "منع النقاط",
   "startGameTitle": "ابدأ لعبة الذكاء",
+  "startGameTitle3": "ابدأ لعبة 3",
   "team1Name": "اسم الفريق الأول",
   "enterTeam1Name": "أدخل اسم الفريق الأول",
   "team2Name": "اسم الفريق الثاني",
