--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -25,12 +25,14 @@
   "second": "Second",
   "gameConnect": "Connect 4",
   "gameTitle": "IQ Game",
+  "gameThree": "Game 3",
   "backToBoard": "Back to Board",
   "exit": "Exit",
   "endGame": "End Game",
   "noQuestions": "No questions in this category",
   "team1Points": "Team 1 Points",
   "team2Points": "Team 2 Points",
+  "team2Points3": "Point of team",
   "noTitle": "No Title",
   "questionImage": "Question Image",
   "points": "Points",
@@ -40,6 +42,7 @@
   "doublePoints": "Double Points",
   "blockPoints": "Block Points",
   "startGameTitle": "Start IQ Game",
+  "startGameTitle3": "Start Game 3",
   "team1Name": "Team 1 Name",
   "enterTeam1Name": "Enter Team 1 Name",
   "team2Name": "Team 2 Name",
