upload jummat last updated

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -39,8 +39,12 @@
   "showAnswer": "أظهر الإجابة",
   "noAnswer": "لا توجد إجابة",
   "team": "الفريق",
+  "doYouWantHelp": "يمكن لأي من الفريقين استخدام وسائل مساعدة قبل البدأ",
+  "startQuestion": "ابدأ السؤال",
   "doublePoints": "مضاعفة النقاط",
   "blockPoints": "منع النقاط",
+  "halfPoints": "نصف النقاط",
+  "newPassword": "تغيير كلمة المرور ",
   "startGameTitle": "ابدأ لعبة الذكاء",
   "startGameTitle3": "ابدأ لعبة 3",
   "team1Name": "اسم الفريق الأول",
