--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -33,14 +33,18 @@
   "team1Points": "Team 1 Points",
   "team2Points": "Team 2 Points",
   "team2Points3": "Point of team",
+  "newPassword": "New Password",
   "noTitle": "No Title",
   "questionImage": "Question Image",
   "points": "Points",
   "showAnswer": "Show Answer",
   "noAnswer": "No Answer",
   "team": "Team",
+  "doYouWantHelp": "Either team can use a help option before starting",
+  "startQuestion": "Start Question",
   "doublePoints": "Double Points",
   "blockPoints": "Block Points",
+  "halfPoints": "half Points",
   "startGameTitle": "Start IQ Game",
   "startGameTitle3": "Start Game 3",
   "team1Name": "Team 1 Name",
