upload some edites

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -27,8 +27,8 @@
   "first": "الأول",
   "second": "الثاني",
   "gameConnect": "وصل أربعة",
-  "gameTitle": "لعبة الذكاء",
-  "gameThree": "اللعبة الثالثة",
+  "gameTitle": "تحدي الأسئلة",
+  "gameThree": "  بدون كلام",
   "backToBoard": "الرجوع للوحة",
   "exit": "خروج",
   "endGame": "إنهاء اللعبة",
@@ -43,6 +43,7 @@
   "showAnswer": "أظهر الإجابة",
   "noAnswer": "لا توجد إجابة",
   "team": "الفريق",
+  "teama": "فريق",
   "doYouWantHelp": "يمكن لأي من الفريقين استخدام وسائل مساعدة قبل البدأ",
   "startQuestion": "ابدأ السؤال",
   "doublePoints": "مضاعفة النقاط",
