--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -27,8 +27,8 @@
   "first": "First",
   "second": "Second",
   "gameConnect": "Connect 4",
-  "gameTitle": "IQ Game",
-  "gameThree": "Game 3",
+  "gameTitle": "question Challenge",
+  "gameThree": "  Without Talking",
   "backToBoard": "Back to Board",
   "exit": "Exit",
   "endGame": "End Game",
@@ -44,6 +44,7 @@
   "showAnswer": "Show Answer",
   "noAnswer": "No Answer",
   "team": "Team",
+  "teama": "Team",
   "doYouWantHelp": "Either team can use a help option before starting",
   "startQuestion": "Start Question",
   "doublePoints": "Double Points",
