--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -1,4 +1,19 @@
 {
+  "roundExplanation": "شرح الجولة",
+  "gameGuide": "دليل اللعبة",
+  "gotIt": "تمام فهمت",
+  "round1": {
+    "title": "الجولة الأولى (التمثيل)",
+    "description": "قم بمسح الباركود الظاهر من جهاز آخر، واشرح لزميلك بالحركات فقط بدون صوت أو كلام أو تلميح.\n\nاحتساب النقاط: الثواني هي نقاطك، كلما أجبت بسرعة حصلت على نقاط أكثر."
+  },
+  "round2": {
+    "title": "الجولة الثانية (الرسم)",
+    "description": "قم بمسح الباركود الظاهر من جهاز آخر، واشرح لزميلك بالرسم فقط بدون صوت أو كلام، ولا تستخدم الحروف أو الأرقام في الرسم.\n\nاحتساب النقاط: الثواني هي نقاطك، كلما أجبت بسرعة حصلت على نقاط أكثر."
+  },
+  "round3": {
+    "title": "الجولة الثالثة (كلمة واحدة)",
+    "description": "قم بمسح الباركود الظاهر من جهاز آخر، واشرح لزميلك بكلمة واحدة فقط، بدون ذكر اسم الشيء الظاهر في الصورة.\n\nاحتساب النقاط: إذا أجبت باستخدام كلمات أقل، تحصل على نقاط أكثر."
+  },
   "scanToShowQR": "أمسح الصورة لعرض QR Code",
   "preparePhone": "جهّز هاتف آخر لمسح الباركود",
   "pressTo": "ثم اضغط على",
@@ -23,7 +38,7 @@
   "titleDraw": "حظ سعيد للفريقين",
   "connectwin": "تهانينا للفائز",
   "titleWin": "تهانينا للفريق {team}",
-  "teamTurn": "دور الفريق",
+  "teamTurn": "إجابة خاطئة",
   "first": "الأول",
   "second": "الثاني",
   "gameConnect": "وصل أربعة",
@@ -50,7 +65,7 @@
   "blockPoints": "منع النقاط",
   "halfPoints": "نصف النقاط",
   "newPassword": "تغيير كلمة المرور ",
-  "startGameTitle": "ابدأ لعبة الذكاء",
+  "startGameTitle": "بدون كلام",
   "startGameTitle3": "ابدأ لعبة 3",
   "team1Name": "اسم الفريق الأول",
   "enterTeam1Name": "أدخل اسم الفريق الأول",
@@ -132,6 +147,10 @@
   "deleteAccount": "حذف الحساب",
   "confirmDeleteAccount": "تأكيد حذف الحساب",
   "areYouSureToDeleteAccount": "هل أنت متأكد أنك تريد حذف حسابك ؟  لا يمكن التراجع عن هذه العملي",
+  "paidSubscriptionWarning": "يبدو أن لديك اشتراكًا مدفوعًا، لن يمكنك استرجاع المبلغ بعد الحذف.",
+  "enterPasswordToConfirmDelete": "أدخل كلمة المرور لتأكيد الحذف:",
+  "typeDeleteToConfirm": "اكتب كلمة \"حذف\" لتأكيد العملية:",
+  "typeDeletePlaceholder": "اكتب حذف هنا",
   "email": "البريد الالكتروني",
   "myAccount": "حسابي",
   "contact": "تواصل",
