--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -39,6 +39,7 @@
   "connectwin": "تهانينا للفائز",
   "titleWin": "تهانينا للفريق {team}",
   "teamTurn": "إجابة خاطئة",
+  "teamTurno": "دور فريق",
   "first": "الأول",
   "second": "الثاني",
   "gameConnect": "وصل أربعة",
