--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -26,6 +26,7 @@
   "yes": "Yes",
   "no": "No",
   "backHome": "Back to Home",
+  "movedToTeam": "Question moved to  ",
   "noCategory": "No Category",
   "correct": "Correct Answer?",
   "wrong": "Wrong Answer",
@@ -38,7 +39,8 @@
   "titleDraw": "Good luck to both",
   "connectwin": "Congratulations to Winner ",
   "titleWin": "Congratulations to Team {team}",
-  "teamTurn": "ًWrong Answer",
+  "teamTurn": "Worng",
+  "teamTurni": "Current Team",
   "teamTurno": "current team",
   "first": "First",
   "second": "Second",
@@ -211,6 +213,7 @@
   "title": "Title",
   "description": "Description",
   "send": "Send",
+  "enter word": "Enter Word",
   "pleaseEnterTitle": "Please enter title",
   "pleaseEnterDescription": "Please enter description",
   "start": "Start",
@@ -260,13 +263,14 @@
   "game": "Game",
   "dataNotFound": "Data Not Found",
   "tryAgain": "Try Again",
-  "silentRound": "Silent Round",
+  "silentRound": "Acting",
   "drawingChallenge": "Drawing Challenge",
-  "secretWord": "Secret Word",
+  "secretWord": "one Word",
   "sharedQuestions": "Shared Questions",
   "Ready": "Ready ?",
-  "RightAnswer": " Right Answer",
+  "RightAnswer": " Right ",
   "TheSecondTeam": "Second Team",
   "didTeamAnswerCorrectly": "Did team {team} answer correctly?",
-  "currentRound": "Current Round"
+  "currentRound": "Current Round",
+  "point": "Points"
 }
