--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -26,6 +26,7 @@
   "yes": "نعم",
   "no": "لا",
   "backHome": "الرجوع للصفحة الرئيسية",
+  "movedToTeam": " تم نقل السؤال الي فريق ",
   "noCategory": "بدون كاتيجوري",
   "correct": "إجابة صحيحة ؟",
   "wrong": "إجابة خاطئة",
@@ -39,6 +40,7 @@
   "connectwin": "تهانينا للفائز",
   "titleWin": "تهانينا للفريق {team}",
   "teamTurn": "إجابة خاطئة",
+  "teamTurni": "فريق ",
   "teamTurno": "دور فريق",
   "first": "الأول",
   "second": "الثاني",
@@ -212,6 +214,7 @@
   "title": "العنوان",
   "description": "الوصف",
   "send": "إرسال",
+  "enter word": "أدخل الإجابة",
   "pleaseEnterTitle": "الرجاء إدخال العنوان",
   "pleaseEnterDescription": "الرجاء إدخال الوصف",
   "start": "أبدأ",
@@ -260,13 +263,14 @@
   "loading": "جاري التحميل",
   "dataNotFound": "لم يتم العثور على البيانات",
   "tryAgain": "حاول مرة أخرى",
-  "silentRound": "بدون كلام",
+  "silentRound": "التمثيل",
   "drawingChallenge": "تحدّي الرسم",
-  "secretWord": "كلمة السر",
+  "secretWord": "كلمة واحدة",
   "sharedQuestions": "الأسئلة المشتركة",
   "Ready": "    جاهز ؟",
-  "RightAnswer": "   إجابة صحيح",
+  "RightAnswer": "إجابة صحيح",
   "TheSecondTeam": "الفريق الثاني",
   "didTeamAnswerCorrectly": "هل أجاب الفريق {team} الإجابة الصحيحة؟",
-  "currentRound": "الجولة الحالية "
+  "currentRound": "الجولة الحالية ",
+  "point": "نقاط"
 }
