--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -113,7 +113,7 @@
   "createGame": "إنشاء لعبة",
   "gameName": "إسم اللعبة",
   "enterGameName": "مثال : تحدي لعبة الألوان",
-  "chooseCategories": ": أختر التصنيفات التي ترغب في تضمينها في اللعبة",
+  "chooseCategories": " أختر التصنيفات التي ترغب في تضمينها في اللعبة",
   "hint": "عرض التلميح",
   "close": "إغلاق",
   "maxCategories": "لا يمكنك اختيار أكثر من 6 تصنيفات",
