--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -127,7 +127,9 @@
   "noHint": "لا يوجد تلميح",
   "contactUs": "تواصل معنا",
   "name": "الإسم",
+  "subject": "الموضوع",
   "enterName": "سجل الإسم",
+  "entersubject": "أدخل الموضوع",
   "enterPhone": "رقم الجوال",
   "message": "رسالتك",
   "enterMessage": "اكتب رسالتك هنا",
@@ -187,7 +189,7 @@
   "resend": "إعادة إرسال",
   "home": "الرئيسية",
   "create": "انشاء",
-  "myGames": "الألعابي",
+  "myGames": "ألعابي",
   "profile": "حسابي",
   "communication": "تواصل",
   "yourGameBalance": "رصيد ألعابك",
