--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -124,7 +124,9 @@
   "createBtn": "Create Game",
   "noHint": "No hint available",
   "name": "Name",
+  "subject": "Subject",
   "enterName": "Enter your name",
+  "enterSubject": "Enter subject",
   "enterPhone": "Enter your phone number",
   "message": "Message",
   "enterMessage": "Write your message here",
