upload before destroy

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -190,6 +190,7 @@
   "home": "الرئيسية",
   "create": "انشاء",
   "myGames": "ألعابي",
+  "loadmore": "تحميل المزيد",
   "profile": "حسابي",
   "communication": "تواصل",
   "yourGameBalance": "رصيد ألعابك",
