--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -125,6 +125,7 @@
   "noHint": "No hint available",
   "name": "Name",
   "subject": "Subject",
+  "loadmore": "Load More",
   "enterName": "Enter your name",
   "enterSubject": "Enter subject",
   "enterPhone": "Enter your phone number",
