fix some 5logic and apear last img in game 3

--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -279,5 +279,10 @@
   "teamHelp": "مساعدات الفريق",
   "doublePointsActivated": "تم مضاعفة نقاط السؤال",
   "blockOpponent": "تم منع الخصم من الإجابة",
-  "halfPointsLost": "تم خصم نصف نقاط السؤال"
+  "halfPointsLost": "تم خصم نصف نقاط السؤال",
+  "quizChallenge": "تحدي الأسئلة",
+  "noWords": "بدون كلام",
+  "quizChallengeDesc": "قسم اصدقائك الى مجموعتين وقم بالاختيار من تصنيفات الأسئلة وابدأ اللعب.\nاحتساب النقاط:\n200 سهل\n400 متوسط\n600 صعب.\nاستخدم وسائل المساعدة لتعزيز نقاطك أو لتعطيل خصمك.",
+  "connectFourDesc": "قسم اصدقائك الى مجموعتين واختار تصنيف واحد فقط للعب.\nطرق الفوز:\n1- توصيل 4 قطع متتالية.\n2- إذا لم يفز أحد، يفوز من لديه قطع أكثر.",
+  "noWordsDesc": "لديك ثلاثة جولات مختلفة للتنافس، والوقت هو العامل الرئيسي للفوز.\nالجولة الأولى: التمثيل...\nالجولة الثانية: الرسم...\nالجولة الثالثة: كلمة واحدة..."
 }
