--- a/public/locales/ar.json
+++ b/public/locales/ar.json
@@ -80,8 +80,9 @@
   "findo": "يمكنك العثور على جميع الالعاب التي قام جامات بإضافتها و شرائها ",
   "game": "لعبة",
   "activateBalance": "تفعيل رصيدك",
+  "noMedia": "لا يوجد وسائط متاحة.",
   "maxGamesNotice": "يمكنك إنشاء حتى 10 ألعاب",
-  "jamaatGameLibrary": "JAMAAT مكتبة ألعاب",
+  "jamaatGameLibrary": " مكتبة ألعاب",
   "findAllGames": "يمكنك العثور على جميع الالعاب التي قام جامات بإضافتها و شرائها",
   "noGamesYet": "🚫 لا توجد ألعاب حتى الآن",
   "createNewGame": "إنشاء لعبة جديدة",
