--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -77,8 +77,9 @@
   "playersCount": "Number of Players",
   "startButton": "Start Game",
   "type": "All Types",
+  "noMedia": "No media available.",
   "findo": "You can Find All Games In Jemmat Buy and Add it",
-  "jamaatGameLibrary": "JAMAAT Game Library",
+  "jamaatGameLibrary": " Game Library",
   "findAllGames": "Find all the games added and purchased by JAMAAT",
   "noGamesYet": "🚫 No games available yet",
   "createNewGame": "Create a new game",
